# rlz-rs

./: Cargo.toml  README.md
benches/: encode.rs
data/: english.50MB
proptest-regressions/: coder.txt
src/: coder.rs  config.rs  decoder.rs  dict.rs  encoder.rs  error.rs  factor.rs  index.rs  lib.rs  scratch.rs  vbyte.rs
src/dict/: reservoir.rs  stratified.rs
src/index/: out.txt  suffix_array.rs
