[package]
name = "rlz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "1.0.0"

[dependencies]
bincode = "1.3.3"
bytemuck = "1.12.1"
bytes = { version = "1.2.1", features = ["serde"] }
cdivsufsort = "2.0.0"
metrohash = "1.0.6"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
tracing = "0.1.36"
zstd = "0.11.2"
