[package]
name = "rlz"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Matthias Petri <Matthias.Petri@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mpetri/rlz-rs"
homepage = "https://github.com/mpetri/rlz-rs"
documentation = "https://docs.rs/rlz"
description = "Relative Lempel-Ziv (RLZ): a LZ based compressor against a large static dictionary"

[dev-dependencies]
proptest = "1.0.0"
criterion = { version = "0.4", default_features = false }


[[bench]]
name = "encode"
harness = false

[dependencies]
bincode = "1.3.3"
bytemuck = "1.12.1"
bytes = { version = "1.2.1", features = ["serde"] }
cdivsufsort = "2.0.0"
metrohash = "1.0.6"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
tracing = "0.1.36"
zstd = "0.11.2"
